ocfl-java-itest/src/test/resources/invalid-repos/bad-logical-paths/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v3/inventory.json.sha512
8890c6f2d79984ce7e2a12e5207380d3642123bb2acf96833aaaed71c48d722ef90d6a971bf63e83e54ad09ea855aa60a9f913ffa22256a710127a8e1648c056  inventory.json
